@@ -308,6 +308,22 @@ public class Hunting extends GatheringSkill
 						stdM = CMLib.catalog().getCatalogMob(mobID);
 					if(stdM == null)
 					{
+						final Race raceR=CMClass.getRace(mobID);
+						if(raceR!=null)
+						{
+							if(raceR.useRideClass())
+								stdM=CMClass.getMOB("GenRideable");
+							else
+								stdM=CMClass.getMOB("GenMob");
+							stdM.setName(CMLib.english().startWithAorAn(raceR.name()));
+							stdM.setDisplayText(stdM.Name()+" is here");
+							stdM.baseCharStats().setMyRace(raceR);
+							stdM.recoverPhyStats();
+							stdM.recoverCharStats();
+						}
+					}
+					if(stdM == null)
+					{
 						commonTell(mob,L("There are no signs of life here."));
 						return false;
 					}
