@@ -93,6 +93,17 @@ number of words in the trainers language, such as sit, kill, etc. Once \
 learned, the creature can be ORDERed when they are a follower, or simply \
 told to do those things using the SAYTO command.
 
+ANIMALTRAPPING=ANIMAL_TRAPPING
+ANIMAL_TRAPPING=<ABILITY>\
+Usage    : ANIMALTRAPPING [CAGE NAME]\n\r\
+Example  : animaltrapping cage\n\r\
+Example  : atrap cage\n\r\
+This skill requires a cage, and the skill allow the player to set \
+the cage in an appropriate place in the room and rig it to close \
+when disturbed, allowing the player to capture small game appropriate \
+to the location.  The trapper need not be present for the trap to work. \
+Checking the trap later is sufficient to know whether it caught anything.
+
 APOTHOCARY=A common misspelling for APOTHECARY.
 MIX=APOTHECARY
 APOTHECARY=<ABILITY>\
