@@ -1,4 +1,4 @@
-#Resource	#Domain	Override Frequency	MOB
+#Resource	#Domain	Override Frequency	MOB/Race
 FISH	WaterSurface	1	Turtle
 FISH	WaterSurface	1	Frog
 FISH	WaterSurface	1	Snake
@@ -13,71 +13,51 @@ DIRT	Jungle	1	Frog
 DIRT	Jungle	1	Snake
 SCALES	*	4	Lizard
 SCALES	*	3	GardenSnake
-SCALES	*	2	Cobra
+SCALES	*	2	Rattlesnake
+SCALES	*	1	Cobra
 FEATHERS	*	1	WildEagle
 FEATHERS	*	1	Falcon
-FEATHERS	*	2	Chicken
+FEATHERS	*	1	Chicken
+FEATHERS	*	1	Rooster
 FEATHERS	*	1	Parakeet
-
-
-
-MUTTON	*	1	Sheep
-WOOL	*	1	Sheep
-LEATHER	*	3	Cow
-LEATHER	*	1	Bull
-LEATHER	*	3	Doe
-LEATHER	*	3	Buck
-HIDE	*	2	Gorilla
-HIDE	*	1	Lion
-HIDE	*	1	Cheetah
-HIDE	*	2	Ape
-HIDE	*	2	Fox
-HIDE	*	2	Monkey
-PORK	*	1	Pig
-FUR		*	4	Wolf
-FUR		*	3	Buffalo
-FUR		*	2	BrownBear
-FUR		*	1	BlackBear
-MEAT	*	4	Wolf
-MEAT	*	3	Buffalo
-MEAT	*	2	BrownBear
-MEAT	*	1	BlackBear
+FEATHERS	*	1	Owl
+FEATHERS	*	1	Raven
+FEATHERS	*	1	Robin
+FEATHERS	*	1	SongBird
+FISH	SaltWaterSurface	5	Turtle
+FISH	SaltWaterSurface	5	Fish
+FISH	SaltWaterSurface	1	WaterFowl
+FISH	UnderSaltWater	5	Fish
+FISH	UnderSaltWater	2	Turtle
+FISH	UnderSaltWater	1	Angelfish
+FISH	UnderSaltWater	1	Seahorse
+TUNA	UnderSaltWater	1	Tuna
+TUNA	UnderSaltWater	1	Tuna
+SHRIMP	SaltWaterSurface	1	Crab
+SHRIMP	SaltWaterSurface	1	Shrimp
+SHRIMP	UnderSaltWater	1	Crab
+SHRIMP	UnderSaltWater	1	Shrimp
 POULTRY	*	1	Chicken
+POULTRY	*	1	Rooster
 EGGS	*	1	Chicken
-BEEF	*	3	Cow
-BEEF	*	1	Bull
-HIDE	IcePlains	9	Seal
-HIDE	FrozenPlains	9	Seal
-HIDE	Shore	9	Seal
-HIDE	IcePlains	9	Walrus
-HIDE	FrozenPlains	9	Walrus
-HIDE	Shore	9	Walrus
-FISH	SaltWaterSurface	1	Whale
-FISH	SaltWaterSurface	1	Seal
-FISH	SaltWaterSurface	1	Walrus
-FISH	UnderSaltWater	1	Whale
-FISH	UnderSaltWater	1	Seal
-FISH	UnderSaltWater	1	Walrus
-FISH	UnderSaltWater	1	Dolphin
-FISH	UnderSaltWater	1	Shark
-FISH	UnderSaltWater	1	Swordfish
-TUNA	SaltWaterSurface	1	Whale
-TUNA	SaltWaterSurface	1	Seal
-TUNA	SaltWaterSurface	1	Walrus
-TUNA	UnderSaltWater	1	Whale
-TUNA	UnderSaltWater	1	Seal
-TUNA	UnderSaltWater	1	Walrus
-TUNA	UnderSaltWater	1	Dolphin
-TUNA	UnderSaltWater	1	Shark
-TUNA	UnderSaltWater	1	Swordfish
-SHRIMP	SaltWaterSurface	1	Whale
-SHRIMP	SaltWaterSurface	1	Seal
-SHRIMP	SaltWaterSurface	1	Walrus
-SHRIMP	UnderSaltWater	1	Whale
-SHRIMP	UnderSaltWater	1	Seal
-SHRIMP	UnderSaltWater	1	Walrus
-SHRIMP	UnderSaltWater	1	Dolphin
-SHRIMP	UnderSaltWater	1	Shark
-SHRIMP	UnderSaltWater	1	Swordfish
+HIDE	IcePlains	1	Rabbit
+HIDE	FrozenPlains	1	Rabbit
+MUTTON	*	1	Rabbit
+WOOL	*	1	Rabbit
+LEATHER	*	1	Rattlesnake
+LEATHER	*	1	Snake
+HIDE	*	1	Porcupine
+PORK	*	1	Pig
+FUR	*	1	Kitten
+FUR	*	1	Puppy
+FUR	*	1	Rabbit
+FUR	*	1	Beaver
+FUR	*	1	Mouse
+MEAT	*	1	Rat
+MEAT	*	1	Mouse
+MEAT	*	1	Squirrel
+BEEF	*	1	Tarantula
+BEEF	*	1	Scorpion
+BEEF	*	1	Spider
+BEEF	*	1	Bee
 
-Rat, Rattlesnake, Rabbit, Rooster, Scorpion, Mouse, Kitten, Puppy, Duck, Beaver, Bee
